# polynominal-interpolation

./: Cargo.toml  README.md
benches/: polynomial_interpolation.rs
src/: lagrange.rs  lib.rs  newton.rs
